relm-derive/tests/ui/widget-attribute/widget-on-struct.stderr
error: expected `impl`
 --> $DIR/widget-on-struct.rs:4:1
  |
4 | struct Bar;
  | ^^^^^^
