relm-derive/tests/ui/widget-attribute/widget-on-struct.rs
use relm_derive::widget;

#[widget]
struct Bar;

fn main() {}
